--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+      mv **/*.war ./..
 artifacts:
   files:
-    - '**/*.war'
+    - *.war
