--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,11 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn package
+      - mvn clean package
   post_build:
     commands:
       - echo Build completed on `date`
-      mv **/*.war ./..
+      - mv **/*.war ./..
 artifacts:
   files:
-    - *.war
+    - **/*.war
