--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: docker login
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWD }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPO }}:${{github.run_number}}
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPO }}
     - name: docker push
-      run: sudo docker push ${{ secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPO }}:${{github.run_number}}
+      run: sudo docker push ${{ secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPO }}
